; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_settings.c_set_spec_date_time_num_format.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_settings.c_set_spec_date_time_num_format.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8*, i8*, i64 }

@conf = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@.str = private unnamed_addr constant [3 x i8] c"%H\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @set_spec_date_time_num_format to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_spec_date_time_num_format() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  store i8* null, i8** %1, align 8
  %4 = call i8* (...) @set_format_time()
  store i8* %4, i8** %2, align 8
  %5 = load i8*, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @conf, i32 0, i32 0), align 8
  store i8* %5, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = icmp ne i8* %6, null
  br i1 %7, label %8, label %11

8:                                                ; preds = %0
  %9 = load i8*, i8** %2, align 8
  %10 = icmp ne i8* %9, null
  br i1 %10, label %12, label %11

11:                                               ; preds = %8, %0
  br label %29

12:                                               ; preds = %8
  %13 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @conf, i32 0, i32 2), align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %22

15:                                               ; preds = %12
  %16 = load i8*, i8** %2, align 8
  %17 = call i64 @strchr(i8* %16, i8 signext 72)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %22

19:                                               ; preds = %15
  %20 = load i8*, i8** %3, align 8
  %21 = call i8* @append_spec_date_format(i8* %20, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  store i8* %21, i8** %1, align 8
  br label %25

22:                                               ; preds = %15, %12
  %23 = load i8*, i8** %3, align 8
  %24 = call i8* @xstrdup(i8* %23)
  store i8* %24, i8** %1, align 8
  br label %25

25:                                               ; preds = %22, %19
  %26 = load i8*, i8** %1, align 8
  store i8* %26, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @conf, i32 0, i32 1), align 8
  %27 = load i8*, i8** %2, align 8
  %28 = call i32 @free(i8* %27)
  br label %29

29:                                               ; preds = %25, %11
  ret void
}

declare dso_local i8* @set_format_time(...) #1

declare dso_local i64 @strchr(i8*, i8 signext) #1

declare dso_local i8* @append_spec_date_format(i8*, i8*) #1

declare dso_local i8* @xstrdup(i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
